--- a/src/blocks/form-builder/style.scss
+++ b/src/blocks/form-builder/style.scss
@@ -125,10 +125,6 @@
 			background-color: rgb(254 226 226); // light red
 			border: 1px solid var(--dsgo-form-error-color);
 		}
-
-		&--editor {
-			display: none;
-		}
 	}
 }
 
